# TC

./: README.md  app.js  database.py  main.py  requirements.txt  schemas.py  sessions.py  upload.py  video_processor.py
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: emotion.py  sessions.py
backend/app/application/use_cases/: analyze_session_video.py  get_session.py  list_sessions.py  predict_emotion.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/domain/entities/: emotion.py  media.py  session.py
backend/app/domain/schemas/: emotion.py  session.py
backend/app/domain/services/: emotion_aggregation.py  ports.py
backend/app/infrastructure/ai/: deepface_analyzer.py  device.py  face_alignment.py  hsemotion_analyzer.py  opencv_decoder.py  opencv_frame_extractor.py  yolo_face_detector.py
backend/app/infrastructure/repositories/: in_memory_session_repository.py
backend/tests/: conftest.py  test_api_emotion.py  test_api_sessions.py  test_emotion_mapping.py  test_session_aggregation.py
frontend/: index.html  package.json
frontend/.claude/: launch.json
frontend/src/: App.jsx
frontend/src/context/: SessionsContext.jsx  ToastContext.jsx
frontend/src/hooks/: useMediaQuery.js  useUpload.js
frontend/src/pages/: Dashboard.jsx  NotFound.jsx  Sessions.jsx  Upload.jsx
frontend/src/routes/: AppRoutes.jsx
frontend/src/services/: api.js  sessionsService.js
frontend/src/styles/: base.css  components.css  (+3 more)
(+23 files in other folders)
